crates/nirvash-macros/tests/fixtures/code_tests_missing_trace_binding.stderr
error[E0277]: the trait bound `Binding: TraceBinding<Spec>` is not satisfied
   --> tests/fixtures/code_tests_missing_trace_binding.rs:106:64
    |
106 |     let _ = nirvash_conformance::require_trace_binding::<Spec, Binding>;
    |                                                                ^^^^^^^ unsatisfied trait bound
    |
help: the trait `TraceBinding<Spec>` is not implemented for `Binding`
   --> tests/fixtures/code_tests_missing_trace_binding.rs:85:1
    |
 85 | struct Binding;
    | ^^^^^^^^^^^^^^
note: required by a bound in `require_trace_binding`
   --> $WORKSPACE/crates/nirvash-conformance/src/lib.rs
    |
    | pub fn require_trace_binding<Spec, Binding>()
    |        --------------------- required by a bound in this function
...
    |     Binding: GeneratedBinding<Spec> + TraceBinding<Spec>,
    |                                       ^^^^^^^^^^^^^^^^^^ required by this bound in `require_trace_binding`
